--- a/topictester/src/main/resources/application.properties
+++ b/topictester/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 
 spring.kafka.bootstrap-servers=127.0.0.1:8080
-spring.kafka.consumer.group-id=order-group-id
+spring.kafka.consumer.group-id=order-team0-group-id
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
