--- a/topictester/src/main/resources/application.properties
+++ b/topictester/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 server.port=8087
 
-spring.kafka.bootstrap-servers=XXX.XXX.X.XX:9092
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+
+spring.h2.console.enabled=true
+
+spring.kafka.bootstrap-servers=edem-lab.sytes.net:9092
 spring.kafka.consumer.group-id=team-X
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
