Update Spring version

--- a/topictester/src/main/resources/application.properties
+++ b/topictester/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.h2.console.enabled=true
 
-spring.kafka.bootstrap-servers=edem-lab.sytes.net:9092
-spring.kafka.consumer.group-id=team-X
+spring.kafka.bootstrap-servers=XXX.XXX.X.XX:9092
+spring.kafka.consumer.group-id=kafka-view-id
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
